# Keyloom

./: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  widget.html
.github/workflows/: release.yml
docs/: 2026-07-12-keyloom-desktop-design.md  2026-07-12-keyloom-implementation-plan.md  releasing.md
docs/superpowers/plans/: 2026-07-12-overview-history.md
installer/nsis/: keyloom.nsi
scripts/: prepare-amkr-runtime.ps1  release.mjs  verify-amkr-contract.py
src/: App.test.tsx  App.tsx  main.tsx  widget-main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: amkr_tool.rs  host_tests.rs  installer.rs  integrations.rs  lib.rs  main.rs  metric_history.rs  tray.rs  tray_tests.rs  windows_service.rs  windows_service_tests.rs
src-tauri/src/amkr/: client.rs  client_tests.rs  discovery_tests.rs  mod.rs
src/api/: amkr.test.ts  amkr.ts
src/components/: ConfirmDialog.tsx  CopyToast.test.tsx  CopyToast.tsx
src/features/activity/: ActivityPage.test.tsx  ActivityPage.tsx
src/features/integrations/: IntegrationsPage.test.tsx  IntegrationsPage.tsx
src/styles/: tokens.css
src/test/: setup.ts
src/widgets/: AmkrWidget.test.tsx  AmkrWidget.tsx  amkr-widget.css
tests/: amkr-widget-contract.ps1  installer-smoke.ps1  nsis-contract.ps1  release-version-contract.ps1  runtime-contract.ps1  windows-subsystem-contract.ps1
tests/e2e/: config.spec.ts  existing-amkr.spec.ts  onboarding.spec.ts  service.spec.ts  tauri-mock.ts
(+16 files in other folders)
