[package]
name = "keyloom-core"
version = "0.1.7"
edition = "2021"
description = "Keyloom desktop control plane for Auto Model Key Router"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rusqlite = { version = "0.40.1", features = ["bundled"] }
reqwest = { version = "0.13.4", default-features = false, features = ["system-proxy"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2.5.1"
